--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -303,5 +303,6 @@ table.bootstraped-annotations td { vertical-align: middle !important; }
 
 table#relationlist .empty { background: #ddd; }
 
+table#tests_document_list .empty { background: #ddd !important; }
 table#testslist tbody tr.corect td { background-color: #B3FF99 !important; }
 table#testslist tbody tr.wrong td { background-color: #FFCECE !important; }
