--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -5,7 +5,7 @@ p { margin: 0px; }
 #table td { padding: 0px 5px; }
 #table th { padding: 0px 10px; }
 table tr.even td { background: #eee; }
-
+hi
 table tr.month_12 td { border-bottom: 1px solid black; }
 
 .hidden { display: none; }
@@ -166,7 +166,7 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 #content { line-height: 120%; }
 // span { border-bottom: 2px solid red; cursor: default;}
 #content small.hightlighted { background: khaki; }
- span.hightlighted { background: yellow !important; }
+ span.hightlighted, span.hightlighted span { background: yellow !important; }
 #content small { color: gray; }
 
 #content.takipi span.w { border: 1px solid #ddd; line-height: 22px; background: #f5f5f5; padding: 0px 2px; } 
