Zmiany w wyświetlaniu listy anotacji i kompunikatu o błędach.

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -215,8 +215,8 @@ table.formated th { background: white; }
 
 .context { background: #FFE1D0; }
 
-b.invalid_border_start { background: red; margin: 2px 0 2px 2px; display: inline-table; }
-b.invalid_border_end { background: red; margin: 2px 2px 2px 0; display: inline-table; }
+b.invalid_border_start { background: red; margin: 2px 0 2px 2px; display: inline-table; color: white}
+b.invalid_border_end { background: darkred; margin: 2px 2px 2px 0; display: inline-table; color: white}
 b.invalid_border_middle { background: red; margin: 2px 0; display: inline-table; }
 b.invalid_border_one { background: red; margin: 2px; display: inline-table; }
 
@@ -380,3 +380,9 @@ table#relationlist .empty { background: #ddd; }
 table#tests_document_list .empty { background: #ddd !important; }
 table#testslist tbody tr.corect td { background-color: #B3FF99; }
 table#testslist tbody tr.wrong td { background-color: #FFCECE; }
+
+.box-header { color: #999; float: left; padding: 5px; width: 110px; text-align: right; font-size: 14px; font-weight: bold; }
+.box-content { padding: 5px; margin-left: 125px; }
+
+ol.answer-contexts { padding-left: 20px; margin-top: 5px; padding-top: 0; }
+ol.answer-contexts li { margin-bottom: 10px; margin-top: 0; }
