--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -72,8 +72,8 @@ em { font-style: normal; color: darkred; font-weight: bold;  }
 tr.odd:hover { background: red;}
 tr.odd:hover td { background: red;}
 
-h1 { margin: 4px 0px; font-size: 18px; line-height: 30px; border-bottom: 1px solid #999; }
-h2 { font-size: 14px; margin: 5px; }
+h1 { margin: 4px 0px; font-size: 18px; line-height: 30px; border-bottom: 1px solid #D49768; border-left: 15px solid #D49768; padding-left: 5px; }
+h2 { font-size: 14px; margin: 20px 0 10px 0; border-left: 15px solid #727DB2; border-bottom: 1px solid #727DB2; padding-left: 5px; }
 h3 { font-size: 12px; margin: 5px; }
 
 a { color: darkblue; text-decoration: none; }
