--- a/public_html/css/styles_lps.css
+++ b/public_html/css/styles_lps.css
@@ -74,3 +74,5 @@ pb p { border: 1px solid #79a2ff; margin: 4px; padding: 4px;}
 pb h1, pb h2 { margin: 0px; border: 0 solid white; padding: 0; }
 corr { color: red; text-decoration: underline}
 
+#error_correlation tr:hover td { border: 1px solid black; }
+
