--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -388,3 +388,5 @@ table#testslist tbody tr.wrong td { background-color: #FFCECE; }
 
 ol.answer-contexts { padding-left: 20px; margin-top: 5px; padding-top: 0; }
 ol.answer-contexts li { margin-bottom: 10px; margin-top: 0; }
+
+.infobox-light { font-size: 16px; margin: 10px; color: #aaa; font-weight: bold; }
