--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -390,3 +390,7 @@ ol.answer-contexts { padding-left: 20px; margin-top: 5px; padding-top: 0; }
 ol.answer-contexts li { margin-bottom: 10px; margin-top: 0; }
 
 .infobox-light { font-size: 16px; margin: 10px; color: #aaa; font-weight: bold; }
+
+
+#ner-annotations ul { margin-left: 10px; padding: 0px; }
+#ner-annotations ul li { margin-left: 10px; padding: 0px; font-size: 10px; margin-bottom: 2px; }
