--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -132,7 +132,7 @@ display:block;
 	margin: 2px 10px;
 	border: 1px solid #667A55;
 	background: white; 
-	padding: 0px 5px;
+	padding: 5px;
 }
 
 #filter_box { border-bottom: 1px solid #555; background: #eee; }
@@ -194,6 +194,7 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 .filter_box div { background: white; border: 1px solid #ccc; padding: 2px; }
 
 .annotation_item { border-bottom: 1px dashed #ccc; }  
+.annotation_item ul { margin-left: 0; padding-left: 20px; }
 
 #content.takipi span { background: #F5F5F5 none repeat scroll 0 0;
 	border:1px solid #DDDDDD;
@@ -256,7 +257,7 @@ ul.topics a.marked { color: black; background: yellow; }
 table#annmap .setGroup { font-weight: bold; }
 table#annmap tr.annotation_type_names:hover td { background: white !important; }
 table#annmap tr.annotation_type_names:hover td.empty2 { background: #fdf !important; }
-table#annmap tr.annotation_type_names ol { margin: 0; padding-left: 20px; }
+table#annmap tr.annotation_type_names ol { margin: 0; padding-left: 40px; }
 table#annmap tr.annotation_type_names ol li:hover { background: #ff9; }
 table#annmap .empty { background: #ddd; }
 table#annmap .empty2 { background: #fdf; }
@@ -394,3 +395,5 @@ ol.answer-contexts li { margin-bottom: 10px; margin-top: 0; }
 
 #ner-annotations ul { margin-left: 10px; padding: 0px; }
 #ner-annotations ul li { margin-left: 10px; padding: 0px; font-size: 10px; margin-bottom: 2px; }
+
+.expandable { cursor: pointer; }
