--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -22,6 +22,16 @@ table tr.month_12 td { border-bottom: 1px solid black; }
     overflow: hidden;
 }
 
+#tooltip {
+	position: absolute;
+	z-index: 3000;
+	border: 1px solid #111;
+	background-color: #eee;
+	padding: 5px;
+	opacity: 0.85;
+}
+#tooltip h3, #tooltip div { margin: 0; }
+
 .flexigrid div.bDiv table#table-documents {
 	margin:0px;
 }
