Integracja z Wccl Match Testerem.

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -9,7 +9,7 @@ content { border-left: 1px solid #555; padding-left: 5px; margin-left: 160px; pa
 /* Copyright (C) 2013 Michał Marcińczuk, Jan Kocoń, Marcin Ptak */
 /* Wrocław University of Technology */
 
-body { font-family: Shanti,arial,sans-serif; font-size: 12px; margin: 0px; padding: 0px; background: #A5CC8F; }
+body { font-family: Shanti,arial,sans-serif; font-size: 12px; margin: 0px; padding: 0px; background: #eee; }
 
 p { margin: 0px; }
 
