--- a/public_html/css/page_wccl_match.css
+++ b/public_html/css/page_wccl_match.css
@@ -27,7 +27,8 @@
 #sentences { margin-right: 20px; }
 #sentences li { font-size: 12px; margin-bottom: 10px; line-height: 18px; }
 
-span.aux { font-weight: bold; border-size: 0; border-bottom: 4px solid #FF4040; }
+span.aux { font-weight: bold; border-size: 0; border-bottom: 4px solid #FF4040; margin-bottom: 2px; display: inline-block;}
+span.aux span.aux { border-color: #92CD00; }
 
 .reference { border: 1px solid #aaa; background: #efefef; color: #444; padding: 2px; margin-top: 4px; }
 .reference div { font-size: 10px; color: #aaa; text-decoration: italic; }
@@ -52,3 +53,16 @@ tok:hover { background: white; border-bottom: 1px solid red; }
 .page { margin: 10px; }
 
 .CodeMirror { border: 1px solid #aaa; }
+
+#toolbox { background: white; overflow: auto; margin-bottom: 10px; }
+#toolbox ul.ui-tabs-nav { height: 28px; }
+#toolbox .ui-tabs-panel { padding: 5px; overflow: auto; height: 150px; }
+
+span.tag { font-weight: bold; color: purple; }
+span.tag a { font-weight: bold; color: purple; text-decoration: underline; }
+span.attribute { color: navy; font-weight: bold;}
+span.attribute a { color: navy; font-weight: bold; text-decoration: underline;}
+span.value{ color: darkgreen; font-weight: bold;}
+span.value a{ color: darkgreen; font-weight: bold; text-decoration: underline;}
+span.tagattr { color: #e08700; }
+span.string { color: #a11; }
