--- a/public_html/js/codemirror/codemirror.css
+++ b/public_html/js/codemirror/codemirror.css
@@ -69,7 +69,7 @@
 /* DEFAULT THEME */
 
 .cm-s-default .cm-keyword {color: #708;}
-.cm-s-default .cm-atom {color: #219;}
+.cm-s-default .cm-atom {color: purple;}
 .cm-s-default .cm-number {color: #164;}
 .cm-s-default .cm-def {color: #00f;}
 .cm-s-default .cm-variable {color: black;}
