--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -534,7 +534,14 @@ div.tasks ul.documents li { list-style: none; }
 .button:hover {
 	border: 1px solid #005B9A; 
 	background-color: #DCF0F7; 
-	font-weight: normal; color: #005B9A; outline: none;}
+	font-weight: normal; color: #005B9A; outline: none;
+}
+	
+.button.warning {
+    background-color: red;
+    color: white;
+    border: 1px solid #660000;
+}
 
 .delete_corpora_button { border-color: red; background: #FFCCCC; color: red; }
 .delete_corpora_button:hover { border-color: red; background: #FF8080; color: white; }
